# deephaven-plugin-microphone

./: .gitignore  README.md  setup.cfg  setup.py
src/deephaven_plugin_microphone/: deephaven_plugin_microphone_object.py  deephaven_plugin_microphone_type.py
src/js/: package-lock.json
src/js/src/: DeephavenPluginMicrophonePlugin.ts  DeephavenPluginMicrophoneView.tsx  index.ts  package-lock.json
