[metadata]
name = deephaven-plugin-microphone
description = Deephaven plugin for microphone input
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1.dev0
keywords = deephaven, plugin, microphone, audio input,
author = Mike Bender
author_email = mikebender@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.31.0
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven_plugin_microphone.register:DeephavenPluginMicrophoneRegistration
